--- a/services/chatbot-service/package.json
+++ b/services/chatbot-service/package.json
@@ -12,7 +12,10 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.7",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.5.0",
     "dotenv": "^16.4.5",
     "typescript": "^5.5.4"
@@ -21,6 +24,8 @@
     "axios": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "openai": "^4.68.1"
   }
 }
