--- a/services/user-service/package.json
+++ b/services/user-service/package.json
@@ -12,7 +12,11 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cookie-parser": "^1.4.7",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.5.0",
     "dotenv": "^16.4.5",
     "nodemon": "^3.1.4",
